// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromoSection component renders a two-thirds row 1`] = `
<div>
  <div
    class="PromoSection Section Section--white"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root grid MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
          >
            <div
              class="content"
            >
              <h2
                class="MuiTypography-root title Typography Typography--underline MuiTypography-h2"
              >
                H2 Heading
              </h2>
              <h3
                class="MuiTypography-root subtitle Typography MuiTypography-h3"
              >
                H2 Heading
              </h3>
              Vestibulum quis ultricies diam. Quisque porttitor sit amet elit sit amet mollis. Aliquam eget interdum enim. Aliquam mattis hendrerit quam, tincidunt posuere purus rutrum sit amet. In tincidunt, enim ac suscipit feugiat, lacus lorem venenatis libero, id efficitur ipsum nisi ut nibh.
            </div>
          </div>
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
          >
            <img
              alt="Lorem ipsum"
              class="image Media"
              src="path-to-image"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoSection component renders correctly 1`] = `
<div>
  <div
    class="PromoSection Section Section--white"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root grid MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          >
            <div
              class="content"
            >
              <h2
                class="MuiTypography-root title Typography Typography--underline MuiTypography-h2"
              >
                H2 Heading
              </h2>
              <h3
                class="MuiTypography-root subtitle Typography MuiTypography-h3"
              >
                H2 Heading
              </h3>
              Vestibulum quis ultricies diam. Quisque porttitor sit amet elit sit amet mollis. Aliquam eget interdum enim. Aliquam mattis hendrerit quam, tincidunt posuere purus rutrum sit amet. In tincidunt, enim ac suscipit feugiat, lacus lorem venenatis libero, id efficitur ipsum nisi ut nibh.
            </div>
          </div>
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          >
            <img
              alt="Lorem ipsum"
              class="image Media"
              src="path-to-image"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoSection component renders correctly if no props passed 1`] = `
<div>
  <div
    class="PromoSection Section Section--white"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root grid MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          >
            <div
              class="content"
            >
              Vestibulum quis ultricies diam. Quisque porttitor sit amet elit sit amet mollis. Aliquam eget interdum enim. Aliquam mattis hendrerit quam, tincidunt posuere purus rutrum sit amet. In tincidunt, enim ac suscipit feugiat, lacus lorem venenatis libero, id efficitur ipsum nisi ut nibh.
            </div>
          </div>
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoSection component renders correctly if title is react node 1`] = `
<div>
  <div
    class="PromoSection Section Section--white"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root grid MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          >
            <div
              class="content"
            >
              <h2
                class="MuiTypography-root title Typography Typography--underline MuiTypography-h2"
              >
                <span
                  class="test-title"
                >
                  Title
                </span>
              </h2>
              <h3
                class="MuiTypography-root subtitle Typography MuiTypography-h3"
              >
                <span
                  class="test-title"
                >
                  Title
                </span>
              </h3>
              Vestibulum quis ultricies diam. Quisque porttitor sit amet elit sit amet mollis. Aliquam eget interdum enim. Aliquam mattis hendrerit quam, tincidunt posuere purus rutrum sit amet. In tincidunt, enim ac suscipit feugiat, lacus lorem venenatis libero, id efficitur ipsum nisi ut nibh.
            </div>
          </div>
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoSection component renders reversed 1`] = `
<div>
  <div
    class="PromoSection PromoSection--reversed Section Section--white"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root grid MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          >
            <div
              class="content"
            >
              <h2
                class="MuiTypography-root title Typography Typography--underline MuiTypography-h2"
              >
                H2 Heading
              </h2>
              <h3
                class="MuiTypography-root subtitle Typography MuiTypography-h3"
              >
                H2 Heading
              </h3>
              Vestibulum quis ultricies diam. Quisque porttitor sit amet elit sit amet mollis. Aliquam eget interdum enim. Aliquam mattis hendrerit quam, tincidunt posuere purus rutrum sit amet. In tincidunt, enim ac suscipit feugiat, lacus lorem venenatis libero, id efficitur ipsum nisi ut nibh.
            </div>
          </div>
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          >
            <img
              alt="Lorem ipsum"
              class="image Media"
              src="path-to-image"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoSection component renders with alabaster background 1`] = `
<div>
  <div
    class="test-class PromoSection Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root grid MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          >
            <div
              class="content"
            >
              Vestibulum quis ultricies diam. Quisque porttitor sit amet elit sit amet mollis. Aliquam eget interdum enim. Aliquam mattis hendrerit quam, tincidunt posuere purus rutrum sit amet. In tincidunt, enim ac suscipit feugiat, lacus lorem venenatis libero, id efficitur ipsum nisi ut nibh.
            </div>
          </div>
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoSection component renders with white background 1`] = `
<div>
  <div
    class="test-class PromoSection Section Section--white"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root grid MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          >
            <div
              class="content"
            >
              Vestibulum quis ultricies diam. Quisque porttitor sit amet elit sit amet mollis. Aliquam eget interdum enim. Aliquam mattis hendrerit quam, tincidunt posuere purus rutrum sit amet. In tincidunt, enim ac suscipit feugiat, lacus lorem venenatis libero, id efficitur ipsum nisi ut nibh.
            </div>
          </div>
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoSection component renders without a title 1`] = `
<div>
  <div
    class="PromoSection Section Section--white"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root grid MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          >
            <div
              class="content"
            >
              Vestibulum quis ultricies diam. Quisque porttitor sit amet elit sit amet mollis. Aliquam eget interdum enim. Aliquam mattis hendrerit quam, tincidunt posuere purus rutrum sit amet. In tincidunt, enim ac suscipit feugiat, lacus lorem venenatis libero, id efficitur ipsum nisi ut nibh.
            </div>
          </div>
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
          >
            <img
              alt="Lorem ipsum"
              class="image Media"
              src="path-to-image"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
